@@ -71,21 +71,21 @@
 		<dependency org="com.google.guava" name="guava" rev="11.0.2" />
 		<dependency org="com.google.code.crawler-commons" name="crawler-commons"
 			rev="0.5" />
-                <dependency org="org.apache.cxf" name="cxf" rev="3.0.4"/>
-                <dependency org="org.apache.cxf" name="cxf-rt-frontend-jaxws" rev="3.0.4"/>
-                <dependency org="org.apache.cxf" name="cxf-rt-frontend-jaxrs" rev="3.0.4"/>
-                <dependency org="org.apache.cxf" name="cxf-rt-transports-http" rev="3.0.4"/>
-                <dependency org="org.apache.cxf" name="cxf-rt-transports-http-jetty" rev="3.0.4"/>
-                <dependency org="com.fasterxml.jackson.core" name="jackson-databind" rev="2.5.1" /> 
-                <dependency org="com.fasterxml.jackson.dataformat" name="jackson-dataformat-cbor" rev="2.5.1" />
-                <dependency org="com.fasterxml.jackson.jaxrs" name="jackson-jaxrs-json-provider" rev="2.5.1" />	
+        <dependency org="org.apache.cxf" name="cxf" rev="3.0.4"/>
+        <dependency org="org.apache.cxf" name="cxf-rt-frontend-jaxws" rev="3.0.4"/>
+        <dependency org="org.apache.cxf" name="cxf-rt-frontend-jaxrs" rev="3.0.4"/>
+        <dependency org="org.apache.cxf" name="cxf-rt-transports-http" rev="3.0.4"/>
+        <dependency org="org.apache.cxf" name="cxf-rt-transports-http-jetty" rev="3.0.4"/>
+        <dependency org="com.fasterxml.jackson.core" name="jackson-databind" rev="2.5.1" /> 
+        <dependency org="com.fasterxml.jackson.dataformat" name="jackson-dataformat-cbor" rev="2.5.1" />
+        <dependency org="com.fasterxml.jackson.jaxrs" name="jackson-jaxrs-json-provider" rev="2.5.1" />	
 
-                <dependency org="org.apache.commons" name="commons-jexl" rev="2.1.1" />
+        <dependency org="org.apache.commons" name="commons-jexl" rev="2.1.1" />
 
-                 <dependency org="org.apache.mahout" name="mahout-math" rev="0.8" />
-                 <dependency org="org.apache.mahout" name="mahout-core" rev="0.8" />
-                 <dependency org="org.apache.lucene" name="lucene-core" rev="4.3.0" />
-                 <dependency org="org.apache.lucene" name="lucene-analyzers-common" rev="4.3.0" />
+        <dependency org="org.apache.mahout" name="mahout-math" rev="0.8" />
+        <dependency org="org.apache.mahout" name="mahout-core" rev="0.8" />
+        <dependency org="org.apache.lucene" name="lucene-core" rev="4.3.0" />
+        <dependency org="org.apache.lucene" name="lucene-analyzers-common" rev="4.3.0" />
               
 		<!--Configuration: test -->
 
